refactor Principal class to enhance output formatting and add number formatting for salary calculations